Kubernetes/ActivityPubServer-Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ap-deployment
spec:
  selector:
    matchLabels:
      app: ap
  template:
    metadata:
      labels:
        app: ap
    spec:
      containers:
        - name: ap
          image: lnadev/activity-pub-server:43
          imagePullPolicy: Always
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
              name: port-http
---
apiVersion: v1
kind: Service
metadata:
  name: ap-service
spec:
  selector:
    app: ap
  ports:
    - port: 80
      targetPort: port-http
      name: http

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ap-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: default-redirectscheme@kubernetescrd
spec:
  tls:
    - hosts:
        - "ap.lna-dev.net"
      secretName: ap-cert
  rules:
    - host: ap.lna-dev.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ap-service
                port:
                  number: 80
#
#---
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: ap-redirection-ingress
#  annotations:
#    cert-manager.io/cluster-issuer: letsencrypt
#    traefik.ingress.kubernetes.io/router.entrypoints: websecure
#    traefik.ingress.kubernetes.io/router.middlewares: default-redirectschemefipv@kubernetescrd
#spec:
#  tls:
#    - hosts:
#        - "xn--fachinformatiker-prfungsvorbereitung-w0d.de"
#      secretName: ap-cert-fipv
#  rules:
#    - host: xn--fachinformatiker-prfungsvorbereitung-w0d.de
#      http:
#        paths:
#          - path: /
#            pathType: Prefix
#            backend:
#              service:
#                name: ap-service
#                port:
#                  number: 80
#    - host: fi.lna-dev.net
#      http:
#        paths:
#          - path: /
#            pathType: Prefix
#            backend:
#              service:
#                name: ap-service
#                port:
#                  number: 80
#
#---
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: ap-redirection-ingress-http
#  annotations:
#    traefik.ingress.kubernetes.io/router.entrypoints: web
#    traefik.ingress.kubernetes.io/router.middlewares: default-redirectschemefipv@kubernetescrd
#spec:
#  rules:
#    - host: xn--fachinformatiker-prfungsvorbereitung-w0d.de
#      http:
#        paths:
#          - path: /
#            pathType: Prefix
#            backend:
#              service:
#                name: ap-service
#                port:
#                  number: 80
#    - host: fi.lna-dev.net
#      http:
#        paths:
#          - path: /
#            pathType: Prefix
#            backend:
#              service:
#                name: ap-service
#                port:
#                  number: 80

---
# Needed because of HTTP to HTTPS redirecting
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ap-ingress-http
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: default-redirectscheme@kubernetescrd
spec:
  rules:
    - host: ap.lna-dev.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ap-service
                port:
                  number: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirectscheme
spec:
  redirectRegex:
    regex: '^https?://(?:www\.)?(.+)'
    replacement: "https://${1}"
    permanent: true
#
#---
#apiVersion: traefik.containo.us/v1alpha1
#kind: Middleware
#metadata:
#  name: redirectschemefipv
#spec:
#  redirectRegex:
#    regex: '.*'
#    replacement: "https://fachinformatikerpruefungsvorbereitung.de"
#    permanent: true
